--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 *.user
 *.userosscache
 *.sln.docstates
-~*
+~$-15 Плугатирьов Дмитро Курсова робота Останній гравець.docx
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
